# gaze_vibe

./: .gitignore  AGENTS.md  CHANGELOG.md  EXPERIMENT_GUIDE.md  PLAN.md  PROGRESS.md  README.md  biome.json  dev.sh  plan.md  test.sh  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
backend/: .env.example  agent_loop.py  app.py  code_refactor.py  config.py  errors.py  experiment_data.jsonl  eye_tracker_processor.py  file_writer.py  llm_client.py  llm_logger.py  persona_loader.py  persona_state.py  prompt_builder.py  pyproject.toml  pytest.ini  requirements.txt  result.py  run.sh  schemas.py  session.py  sse_events.py  test_split.py  tool.py  tool_agent.py  vector_utils.py
backend/memory/: __init__.py  extractor.py  retrieval.py  store.py  types.py
backend/personas/: 现代派.yaml  稳健派.yaml
backend/prompts/: __init__.py  adjustment_template.md  system_a.md  system_b.md  system_split.md
backend/storage/: __init__.py  memory.py  types.py
backend/tests/: test_e2e.py  test_eye_tracker.py  test_session.py  test_storage.py  test_tool.py
docs/: eye-tracking-references.md
docs/plans/: 2026-04-08-auto-selection-plan.md
docs/specs/: 2026-04-08-auto-selection-design.md  2026-04-15-experiment-design.md
frontend/: biome.json  index.html  package.json
frontend/src/: App.vue  config.js  main.js
scripts/: README.md  analyze_classification.py  analyze_experiment.py  analyze_llm_logs.py  analyze_memory.py  analyze_persona.py  analyze_reversal.py  generate_synthetic_data.py  run.sh
(+22 files in other folders)
