[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gaze-vibe-backend"
version = "1.0.0"
description = "GazeVibe 后端服务 — 眼动追踪 AI 编程助手"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "openai>=1.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # 单行长度由 line-length 控制
]

[tool.ruff.lint.per-file-ignores]
# tool_agent.py 将在 Agent Loop 工作流中重构
"tool_agent.py" = ["F821", "F841", "N806"]
# K 是 RRF 公式中标准常数名
"memory/retrieval.py" = ["N806"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["backend"]
python_files = ["test_*.py"]
